--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Text-Extract-MaketextCallPhrases
 
+0.2  Wed Aug 31 17:51:04 2011
+    - rt 70652 items
+
 0.1  Wed Jan  5 21:18:02 2011
        Initial release.
 
