--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Text-Extract-MaketextCallPhrases
 
+0.5  Wed Nov  7 20:56:10 2012
+    - rt 80661: POD
+    - add 'original_text' key to result hash
+    - add 'cpanel_mode' to hashref of args
+    
 0.4  Mon Nov  5 23:06:35 2012
     - rt 80488: bump version in POD
     - rt 80642: POD: type' os 'no_arg' =~ s/os/of/
