--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Text-Extract-MaketextCallPhrases
 
-0.6  Thu Nov  8 14:14:39 CST 2012
+0.7  Sat Nov 17 20:12:42 2102
+    - rt 81205 - POD typo
+    - rt 81206 - Added quote_before, quote_after
+
+0.6  Thu Nov  8 14:14:39 2012
     - add offset_seen internal check
     - add RELEASE_TESTING check above eval in perlcritic test
 
