Import of DMUEY/Text-Extract-MaketextCallPhrases-0.8 from CPAN.
gitpan-cpan-distribution: Text-Extract-MaketextCallPhrases
gitpan-cpan-version:      0.8
gitpan-cpan-path:         DMUEY/Text-Extract-MaketextCallPhrases-0.8.tar.gz
gitpan-cpan-author:       DMUEY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Text-Extract-MaketextCallPhrases
 
+0.8  Wed Nov 21 21:53:37 2012
+    - address uninit warnings
+    
 0.7  Sat Nov 17 20:12:42 2102
     - rt 81205 - POD typo
     - rt 81206 - Added quote_before, quote_after
